--- a/BookShop/index.html
+++ b/BookShop/index.html
@@ -7,7 +7,7 @@
     <title>BookShop</title>
     <meta name="description" content="">
     <meta name="keywords" content="">
-    <link rel="stylesheet" type="text/css" href="http://www.jq22.com/jquery/bootstrap-3.3.4.css">
+    <link rel="stylesheet" type="text/css" href="./bootstrap.css">
     <link rel="stylesheet" type="text/css" href="http://www.jq22.com/jquery/font-awesome.4.6.0.css">
     <style type="text/css">
     .search-box {
